<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/my_matches"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/my_match"/>

    <item
        android:id="@+id/request"
        android:title="@string/create_match"
        android:icon="@drawable/ic_baseline_control_point_duplicate_24" />

    <item
        android:id="@+id/pitch"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/home_pitch"/>

    <item
        android:id="@+id/person"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/account"/>

</menu>