<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signin.google.GoogleSignInActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/intro_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tvIntro"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textSize="28sp"/>


    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/it_s_easier_to_sign_up_now"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinueGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="40dp"
        android:layout_below="@+id/tvIntro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAnotherContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnContinueGoogle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/sign_in_button_stroke"
        android:paddingHorizontal="80dp"
        android:text="@string/use_phone_number"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:strokeColor="@android:color/darker_gray"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/tvOthersSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnAnotherContinue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/or_sign_up_with"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/facebook_icon"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/tvOthersSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_facebook" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/tvAlreadyHaveAccount"
            android:text="@string/sign_in_underline"
            android:textColor="@color/yellow"
            android:textSize="12sp" />

    </RelativeLayout>


</RelativeLayout>