<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usersetting.account.UserAccountActivity"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/user_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24_black"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/account_information"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/user_account_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:src="@drawable/blank_image" />

        <LinearLayout
            android:id="@+id/email_container"
            android:layout_below="@+id/avatar"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_phone_24"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_below="@+id/email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_vpn_key_24"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center_vertical"/>

                <TextView
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_your_password"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_baseline_arrow_forward_ios_24_black" />
            </LinearLayout>

        </RelativeLayout>

    <Button
        android:visibility="gone"
        android:id="@+id/save_avatar"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save" />

</RelativeLayout>